--- a/git-fastexport.cabal
+++ b/git-fastexport.cabal
@@ -18,6 +18,8 @@ executable git-fastexport-filter
         bytestring >= 0.9.1,
         bytestring-trie >= 0.2.3,
         conduit >= 0.5,
+        filepath >= 1.3.0.0,
+        cmdtheline >= 0.2,
         git-fastexport
 
 library
